--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -11,9 +11,29 @@
   padding: 10px 0;
 }
 
+.burgerItems {
+  display: none;
+}
+
 @media only screen and (max-width: 600px) {
   .navItem {
     display: none;
+  }
+
+  .burgerItems {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    height: 200px;
+    width: 100%;
+    top: 165px;
+    background-color: rgb(0, 225, 255);
+    color: white;
+  }
+
+  .burgerItem {
+    padding: 10px;
   }
   .hamburgerContainer {
     display: flex;
@@ -22,7 +42,7 @@
     align-items: center;
     visibility: visible;
     width: 100%;
-    height: 100%;
+    height: 50px;
   }
 
   .burger-bar {
@@ -31,6 +51,10 @@
     height: 0.35rem;
     background-color: rgb(139, 157, 141);
     border-radius: 0.1rem;
+  }
+
+  .burgerItems.inactive {
+    display: none;
   }
 
   .burger-bar.clicked:nth-child(1) {
