Added cursor as pointer.

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -15,6 +15,10 @@
   display: none;
 }
 
+.navItem {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 600px) {
   .navItem {
     display: none;
@@ -34,6 +38,7 @@
 
   .burgerItem {
     padding: 10px;
+    cursor: pointer;
   }
   .hamburgerContainer {
     display: flex;
@@ -43,6 +48,15 @@
     visibility: visible;
     width: 100%;
     height: 50px;
+  }
+
+  .burgerBars {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    cursor: pointer;
   }
 
   .burger-bar {
