Completed the Header portion for now for Header and Navbar. May need to come back if changes are needed.

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -35,13 +35,15 @@
     width: 100%;
     top: 165px;
     background-color: rgb(0, 225, 255);
-    color: white;
   }
 
   .burgerItem {
     padding: 10px;
     cursor: pointer;
+    text-decoration: none;
+    color: white;
   }
+
   .hamburgerContainer {
     display: flex;
     flex-direction: column;
