--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,34 +6,50 @@
   z-index: 1;
 }
 
+/* Container 1 */
+
+.subContainer1 {
+  height: 600px;
+}
+
 .towTruck1 {
   width: 100%;
   height: 100%;
-  margin-bottom: -4px;
 }
 
 .gradient {
-  height: 100%;
+  height: 600px;
   width: 100%;
   background-color: black;
   position: absolute;
   opacity: 0.5;
 }
 
-.text1 {
+.subContainer1Text1 {
   position: absolute;
   bottom: 400px;
   left: 5%;
   color: white;
 }
 
-.text2 {
+.subContainer1Text2 {
   position: absolute;
   font-size: 50px;
   bottom: 200px;
   left: 5%;
   color: orange;
 }
+
+.subContainer1Text3 {
+  position: absolute;
+  bottom: 30px;
+  left: 5%;
+  width: 80%;
+  font-size: 40px;
+  color: white;
+}
+
+/* Container 2 */
 
 .serviceExamplesContainer {
   display: flex;
@@ -51,15 +67,13 @@
 }
 
 .example {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
   display: flex;
   justify-content: space-around;
 }
 
 .exampleText {
   width: 200px;
-
   padding-top: 30px;
   font-size: 25px;
 }
@@ -76,14 +90,67 @@
   color: rgb(2, 248, 121);
 }
 
-.jumperCable {
-  /* position: relative; */
-  top: 30px;
-  left: 10%;
+.ourServicesImage {
   width: 200px;
   height: 200px;
 }
 
+/* Container 3 */
+
+.subContainer3 {
+  padding-top: 10px;
+  width: 100%;
+  height: 700px;
+  background-color: orangered;
+}
+
+.subContainer3TxtContainer {
+  position: absolute;
+  height: 1000px;
+  width: 100%;
+  z-index: 3;
+}
+
+.subContainer3Text1 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-size: 30px;
+  margin: 20px 0 0 20px;
+  background-color: black;
+  color: white;
+  height: 200px;
+  width: 300px;
+  z-index: 2;
+}
+
+.subContainer3Text2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 10%;
+  bottom: 100px;
+  width: 80%;
+  height: 500px;
+  background-color: rgb(238, 238, 238);
+  z-index: 1;
+}
+
+/* Container 4 */
+
+.subContainer4 {
+  height: 1000px;
+  width: 100%;
+  background-color: brown;
+}
+
+@media only screen and (max-width: 850px) {
+  /* .subContainer3Text2 {
+    width: 70%;
+  } */
+}
 @media only screen and (max-width: 600px) {
   .text1 {
     width: 80%;
@@ -91,5 +158,45 @@
   }
   .text2 {
     top: 200px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .subContainer1Text1 {
+    position: absolute;
+    font-size: 20px;
+    bottom: 400px;
+    left: 5%;
+    color: white;
+  }
+
+  .subContainer1Text2 {
+    position: absolute;
+    font-size: 40px;
+    bottom: 200px;
+    left: 5%;
+    color: orange;
+  }
+
+  .subContainer3Text1 {
+    margin: 1px 0 0 10px;
+  }
+
+  .subContainer2 {
+    margin: -150px 0;
+  }
+
+  .ourServicesTitle {
+    margin: 60px 0;
+  }
+
+  .ourServicesImage {
+    width: 125px;
+    height: 125px;
+  }
+
+  .exampleText {
+    width: 200px;
+    font-size: 18px;
   }
 }
