--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,7 +6,7 @@
   z-index: 1;
 }
 
-/* Container 1 */
+/* Subcontainer 1 */
 
 .subContainer1 {
   height: 600px;
@@ -17,11 +17,11 @@
   height: 100%;
 }
 
-.gradient {
+.gradientHome {
+  position: absolute;
   height: 600px;
   width: 100%;
   background-color: black;
-  position: absolute;
   opacity: 0.5;
 }
 
@@ -49,7 +49,7 @@
   color: white;
 }
 
-/* Container 2 */
+/* Subcontainer 2 */
 
 .serviceExamplesContainer {
   display: flex;
@@ -95,7 +95,7 @@
   height: 200px;
 }
 
-/* Container 3 */
+/* Subcontainer 3 */
 
 .subContainer3 {
   padding-top: 10px;
@@ -104,14 +104,7 @@
   background-color: orangered;
 }
 
-.subContainer3TxtContainer {
-  position: absolute;
-  height: 1000px;
-  width: 100%;
-  z-index: 3;
-}
-
-.subContainer3Text1 {
+.subContainer3Content1 {
   position: relative;
   display: flex;
   align-items: center;
@@ -125,39 +118,61 @@
   z-index: 2;
 }
 
-.subContainer3Text2 {
+.subContainer3Content2 {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   position: relative;
-  left: 10%;
+  left: 5%;
   bottom: 100px;
-  width: 80%;
+  width: 90%;
   height: 500px;
   background-color: rgb(238, 238, 238);
   z-index: 1;
 }
 
-/* Container 4 */
+.mechanicImage {
+  width: 150px;
+  height: 150px;
+}
+
+/* Subcontainer 4 */
 
 .subContainer4 {
-  height: 1000px;
+  position: relative;
+  padding: 80px 0;
+  display: flex;
+  justify-content: space-evenly;
+  height: 300px;
   width: 100%;
-  background-color: brown;
+  background-color: ghostwhite;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.subContainer4Content1,
+.subContainer4Content2 {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Footer */
+/* 
+Footer {
+  position: relative;
+  width: 100%;
+  height: 500px;
+} */
+
 @media only screen and (max-width: 850px) {
-  /* .subContainer3Text2 {
-    width: 70%;
-  } */
+  .mechanicImage {
+    width: 120px;
+    height: 120px;
+  }
 }
 @media only screen and (max-width: 600px) {
-  .text1 {
-    width: 80%;
-    top: 90px;
-  }
-  .text2 {
-    top: 200px;
+  .mechanicImage {
+    width: 80px;
+    height: 80px;
   }
 }
 
@@ -198,5 +213,29 @@
   .exampleText {
     width: 200px;
     font-size: 18px;
+  }
+
+  /* Subcontainer 3 */
+
+  .subContainer3 {
+    height: 1000px;
+  }
+
+  .subContainer3Content1 {
+    margin: 5px 0 0 5px;
+  }
+
+  .subContainer3Content2 {
+    flex-direction: column;
+    justify-content: unset;
+    height: 800px;
+  }
+
+  .mechanicImage {
+    position: relative;
+    top: 100px;
+    margin: 10px 0;
+    width: 150px;
+    height: 150px;
   }
 }
