--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
 .App {
+  position: relative;
   height: 100%;
+  z-index: 1;
 }
+
+.main-footer {
+  position: absolute;
+  color: white;
+  width: 100%;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: center;
+  height: 70px;
+  background-color: black;
+}
+
+/* .Footer {
+  width: 100%;
+  color: white;
+  z-index: 2;
+} */
