--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,16 @@
-.main-footer {
-  display: flex;
-  justify-content: center;
-  position: relative;
+/* .main-footer {
+  bottom: 0;
   width: 100%;
-  height: 70px;
-  background-color: black;
+  height: 100%;
+  min-height: 100vh;
   color: white;
   z-index: 10;
-}
+} */
+
+/* .footerContainer {
+  display: flex;
+  justify-content: center;
+  height: 70px;
+  width: 100%;
+  background-color: black;
+} */
