--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,15 +1,14 @@
 .homeContainer {
   width: 100%;
   height: 500px;
-  position: relative;
-  top: 170px;
-  z-index: 1;
 }
 
 /* Subcontainer 1 */
 
 .subContainer1 {
-  height: 600px;
+  position: relative;
+  top: 20px;
+  height: 700px;
 }
 
 .towTruck1 {
@@ -17,32 +16,24 @@
   height: 100%;
 }
 
-.gradientHome {
-  position: absolute;
-  height: 600px;
-  width: 100%;
-  background-color: black;
-  opacity: 0.5;
-}
-
 .subContainer1Text1 {
-  position: absolute;
-  bottom: 400px;
+  position: relative;
+  bottom: 480px;
   left: 5%;
   color: white;
 }
 
 .subContainer1Text2 {
-  position: absolute;
+  position: relative;
   font-size: 50px;
-  bottom: 200px;
+  bottom: 450px;
   left: 5%;
   color: orange;
 }
 
 .subContainer1Text3 {
-  position: absolute;
-  bottom: 30px;
+  position: relative;
+  bottom: 450px;
   left: 5%;
   width: 80%;
   font-size: 40px;
@@ -50,6 +41,10 @@
 }
 
 /* Subcontainer 2 */
+
+.subContainer2 {
+  position: relative;
+}
 
 .serviceExamplesContainer {
   display: flex;
@@ -98,6 +93,7 @@
 /* Subcontainer 3 */
 
 .subContainer3 {
+  position: relative;
   padding-top: 10px;
   width: 100%;
   height: 700px;
@@ -154,14 +150,6 @@
   display: flex;
   flex-direction: column;
 }
-
-/* Footer */
-/* 
-Footer {
-  position: relative;
-  width: 100%;
-  height: 500px;
-} */
 
 @media only screen and (max-width: 850px) {
   .mechanicImage {
