--- a/src/pages/ourServices/OurServices.css
+++ b/src/pages/ourServices/OurServices.css
@@ -1,17 +1,32 @@
 .main-ourServices {
   background-color: rgb(169, 169, 169);
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  top: 170px;
-  height: 620px;
+  height: 100%;
   width: 100%;
 }
 
 .ourServicesContainer {
-  background-color: aqua;
-  height: 100%;
+  position: relative;
+  top: 50px;
+  background-color: white;
+  color: orange;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 150px;
+  margin-bottom: 100px;
+  align-items: center;
+  height: 500px;
   width: 80%;
+  z-index: 3;
+  box-shadow: 8px 8px 30px black;
+}
+
+.ulOurServices {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
