--- a/src/pages/rates/Rates.css
+++ b/src/pages/rates/Rates.css
@@ -1,17 +1,57 @@
 .main-rates {
-  height: 720px;
+  height: 1000px;
   width: 100%;
+}
+
+.ourRatesIntroContainer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 70px;
+  height: 200px;
+  width: 100%;
+  background-color: white;
+}
+
+.ourRatesIntroContainer h1 {
+  font-size: 50px;
+  bottom: 450px;
+  left: 5%;
+  color: orange;
+}
+
+.ourRatesIntroContainer h2 {
+  bottom: 480px;
+  left: 5%;
+  color: white;
+}
+
+.ourRatesImg {
+  position: absolute;
+  height: 340px;
+}
+
+.ourRatesIntro {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: white; */
 }
 
 .ratesContainer {
   position: relative;
-  top: 80px;
+  top: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 700px;
   width: 100%;
+  background-color: gray;
+  margin-bottom: 100px;
 }
 
 .ratesSubContainer {
@@ -25,6 +65,7 @@
   padding: 10px 20px 10px 0;
   background-color: orangered;
   box-shadow: -15px 15px 10px;
+  margin: 80px 0;
 }
 
 .servicesAndRates {
