--- a/src/pages/testing/Testing.css
+++ b/src/pages/testing/Testing.css
@@ -1,8 +1,16 @@
+.main-container-testing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .testingContainer {
   top: 300px;
-  width: 760px;
-  height: 600px;
-  position: relative;
+  width: 600px;
+  height: 300px;
+  position: absolute;
 }
 
 .gradient {
@@ -10,12 +18,10 @@
   width: 100%;
   background-color: black;
   position: absolute;
-  opacity: 0.2;
+  opacity: 0.4;
 }
 
 img {
   height: 100%;
   width: 100%;
-  /* object-fit: cover;
-  display: block; */
 }
