--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,12 @@
 .mainHeaderContainer {
+  position: absolute;
   z-index: 4;
   position: fixed;
   width: 100%;
   height: 1000px;
 }
 .headerContainer {
+  position: relative;
   background-color: rgb(12, 120, 228);
   width: 100%;
   height: 100px;
