--- a/src/pages/contactUs/ContactUs.css
+++ b/src/pages/contactUs/ContactUs.css
@@ -1,10 +1,31 @@
 .main-contactUs {
-  position: absolute;
-  top: 170px;
-  height: 620px;
   width: 100%;
+  height: 800px;
 }
 
 .contactUsContainer {
-  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  top: 190px;
+  width: 100%;
+}
+
+.contactUsSubContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contactUsSubContainer h1 {
+  font-size: 50px;
+  width: 100%;
+  color: orange;
+}
+
+.contactUsSubContainer p {
+  font-weight: 900;
+  font-size: 25px;
+  width: 100%;
 }
