--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -25,7 +25,7 @@
   position: relative;
   bottom: 480px;
   left: 5%;
-  width: 700px;
+  width: 80%;
   color: white;
 }
 
@@ -159,9 +159,6 @@
 }
 
 @media only screen and (max-width: 850px) {
-  /* .subContainer1Text2 {
-    width: 500px;
-  } */
   .mechanicImage {
     width: 120px;
     height: 120px;
