--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -11,7 +11,6 @@
 
 .subContainer1 {
   position: relative;
-  top: 20px;
   width: 100%;
   height: 700px;
 }
@@ -169,23 +168,55 @@
     width: 80px;
     height: 80px;
   }
-}
+  .subContainer1 {
+    width: 100%;
+    height: 700px;
+  }
 
-@media only screen and (max-width: 450px) {
   .subContainer1Text1 {
     position: absolute;
     font-size: 20px;
-    bottom: 400px;
+    bottom: 440px;
     left: 5%;
     color: white;
   }
 
   .subContainer1Text2 {
     position: absolute;
-    font-size: 40px;
-    bottom: 200px;
+    font-size: 38px;
+    bottom: 250px;
     left: 5%;
     color: orange;
+  }
+  .towTruck1 {
+    height: 900px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .subContainer1 {
+    height: 750px;
+    margin-bottom: 100px;
+  }
+  .subContainer1Text1 {
+    position: absolute;
+    font-size: 20px;
+    bottom: 470px;
+    left: 5%;
+    color: white;
+  }
+
+  .subContainer1Text2 {
+    position: absolute;
+    font-size: 38px;
+    bottom: 220px;
+    left: 5%;
+    color: orange;
+  }
+  .subContainer1Text3 {
+    position: absolute;
+    font-size: 30px;
+    bottom: 120px;
   }
 
   .subContainer3Text1 {
@@ -224,6 +255,10 @@
     flex-direction: column;
     justify-content: unset;
     height: 800px;
+  }
+
+  .subContainer4 {
+    height: 400px;
   }
 
   .mechanicImage {
