--- a/src/pages/ourServices/OurServices.css
+++ b/src/pages/ourServices/OurServices.css
@@ -26,7 +26,30 @@
   box-shadow: 8px 8px 30px black;
 }
 
+.ourServicesContainer p {
+  text-align: center;
+  width: 80%;
+}
+
 .ulOurServices {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .ourServicesContainer {
+    height: 600px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .ourServicesContainer {
+    padding: 100px 0;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .ourServicesContainer {
+    height: 800px;
+  }
 }
