--- a/src/pages/aboutUs/AboutUs.css
+++ b/src/pages/aboutUs/AboutUs.css
@@ -136,6 +136,7 @@
   font-weight: 1000;
   font-style: normal;
   font-size: 40px;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 850px) {
